--- a/requirements.txt
+++ b/requirements.txt
@@ -1,93 +1,6 @@
-astroid==1.6.5
-astropy==1.3
-attrs==16.3.0
-autokey==0.90.4
-autopep8==1.4.1
-Babel==2.3.4
-backports.functools-lru-cache==1.5
-beautifulsoup4==4.5.3
-bzr==2.8.0.dev1
-chardet==2.3.0
-chrome-gnome-shell==0.0.0
-click==6.6
-colorama==0.3.7
-configobj==5.0.6
-configparser==3.5.0
-constantly==15.1.0
-cryptography==1.7.1
-diff-match-patch==20121119
-docopt==0.6.2
-enum34==1.1.6
-flake8==3.5.0
-futures==3.2.0
-html5lib==0.999999999
-httplib2==0.9.2
-idna==2.2
-incremental==16.10.1
-iniparse==0.4
-ipaddress==1.0.17
-isort==4.3.4
-keyring==10.1
-keyrings.alt==1.3
-l20n==4.0.0a1
-launchpadlib==1.10.4
-lazr.restfulclient==0.13.4
-lazr.uri==1.0.3
-lazy-object-proxy==1.3.1
-lxml==3.7.1
-mccabe==0.6.1
-meld==3.16.4
-mutagen==1.36
-netifaces==0.10.4
-notify2==0.3
-numpy==1.12.1
-oauth==1.0.1
-PAM==0.4.2
-pep8==1.7.1
-ply==3.9
-protobuf==3.0.0
-psutil==5.0.1
-pulseaudio-dlna==0.5.2
-py==1.4.32
-pyasn1==0.1.9
-pyasn1-modules==0.0.7
-pycodestyle==2.4.0
-pycrypto==2.6.1
-pyenchant==1.6.7
-pyflakes==1.6.0
-pygobject==3.22.0
-pygpgme==0.3
-pyinotify==0.9.6
-pylint==1.9.3
-pyOpenSSL==16.2.0
-pyserial==3.2.1
-pytest==3.0.6
-python-dateutil==2.5.3
-python-gist==0.6.1
-python-gnupg==0.4.3
-python-Levenshtein==0.12.0
-python-xlib==0.14
-pytz==2016.7
-pyxdg==0.25
-PyYAML==3.12
-ranger==1.7.1
-requests==2.12.4
-scour==0.32
-SecretStorage==2.3.1
-service-identity==16.0.0
-setproctitle==1.1.10
-simplejson==3.10.0
-singledispatch==3.4.0.3
-six==1.11.0
-translate-toolkit==2.0.0
-Twisted==16.6.0
-urllib3==1.19.1
-uTidylib==0.3
-vobject==0.9.3
-wadllib==1.3.2
-webencodings==0.5
-wrapt==1.10.11
-yapf==0.24.0
-zeroconf==0.17.6
-zope.interface==4.3.2
-
+certifi==2018.11.29
+chardet==3.0.4
+idna==2.8
+pkg-resources==0.0.0
+requests==2.21.0
+urllib3==1.24.1
